--- a/lesson4/pager.html
+++ b/lesson4/pager.html
@@ -8,18 +8,18 @@
 <body>
   <div class="paginator">
     <ul>
-      <li><a class="pager" href="#">&laquo; FIRST</a></li>
-      <li><a class="pager" href="#">&laquo; PREV</a></li>
+      <li><a class="left-text" href="#">FIRST</a></li>
+      <li><a class="left-text" href="#">PREV</a></li>
       <li><a href="#">1</a></li>
       <li><a href="#">2</a></li>
-      <li><a class="pager hidden" href="#">&hellip;</a></li>
+      <li><a class="hidden" href="#">&hellip;</a></li>
       <li><a href="#">5</a></li>
       <li><a class="current" href="#">6</a></li>
       <li><a href="#">7</a></li>
       <li><a href="#">8</a></li>
       <li><a href="#">9</a></li>
-      <li><a class="pager" href="#">NEXT &raquo;</a></li>
-      <li><a class="pager" href="#">LAST &raquo; </a></li>
+      <li><a class="right-text" href="#">NEXT</a></li>
+      <li><a class="right-text" href="#">LAST</a></li>
     </ul>
   </div>
 
