--- a/lesson6/task2.html
+++ b/lesson6/task2.html
@@ -10,7 +10,7 @@
     <h1><span>what</span> client says</h1>
     <article class="client1">
       <div class="photo1">
-        <img src="static/stasiya.png" alt="customer1"/>
+        <img class="photo2" src="static/stasiya.png" alt="customer1"/>
       </div>
       <div class="comment">
         <div class="header">
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="photo1">
-        <img src="static/david.png" alt="customer2"/>
+        <img class="photo2" src="static/david.png" alt="customer2"/>
       </div>
       <div class="comment">
         <div class="header">
