--- a/js_exam/index.html
+++ b/js_exam/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Wild Gunman</title>
-    <link rel="stylesheet" href="src/styles/style.scss"/>
+    <link rel="stylesheet" href="dist/styles/style-bundle.min.css"/>
     <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
 
 </head>
