--- a/shooter/shooter_exam/index.html
+++ b/shooter/shooter_exam/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Wild Gunman by Inna</title>
+    <title>Wild Gunman</title>
     <link rel="stylesheet" href="dist/styles/style-bundle.min.css"/>
     <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
 
